mixer/test/client/istio_authn_origin_jwt_bound_origin/config.conf.20136.yaml

admin:
  access_log_path: /tmp/envoy-access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 20136
static_resources:
  clusters:
  - name: backend
    connect_timeout: 5s
    type: STATIC
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 20138
  - name: loop
    connect_timeout: 5s
    type: STATIC
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 20134
  - name: mixer_server
    http2_protocol_options: {}
    connect_timeout: 5s
    type: STATIC
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 20137
    circuit_breakers:
      thresholds:
      - max_connections: 10000
        max_pending_requests: 10000
        max_requests: 10000
        max_retries: 3
  listeners:
  - name: server
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 20134
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: inbound_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: /tmp/envoy-access.log
          http_filters:
          
          - name: jwt-auth
            config: {
               "rules": [ 
                 {
                   "issuer": "issuer@foo.com",
                   "local_jwks": {
                     "inline_string": '{ "keys" : [ {"e":   "AQAB", "kid": "DHFbpoIUqrY8t2zpA2qXfCmr5VO5ZEr4RzHU_-envvQ", "kty": "RSA","n":   "xAE7eB6qugXyCAG3yhh7pkDkT65pHymX-P7KfIupjf59vsdo91bSP9C8H07pSAGQO1MV_xFj9VswgsCg4R6otmg5PV2He95lZdHtOcU5DXIg_pbhLdKXbi66GlVeK6ABZOUW3WYtnNHD-91gVuoeJT_DwtGGcp4ignkgXfkiEm4sw-4sfb4qdt5oLbyVpmW6x9cfa7vs2WTfURiCrBoUqgBo_-4WTiULmmHSGZHOjzwa8WtrtOQGsAFjIbno85jp6MnGGGZPYZbDAa_b3y5u-YpW7ypZrvD8BgtKVjgtQgZhLAGezMt0ua3DRrWnKqTZ0BJ_EyxOGuHJrLsn00fnMQ"}]}'
                   },
                   "audiences": ["aud1"],
                   "forward_payload_header": "test-jwt-payload-output"
                 }
               ]
            }
          
          - name: istio_authn
            config: {
              "policy": {
                "origins": [
                  {
                    "jwt": {
                      "issuer": "issuer@foo.com",
                      "jwks_uri": "http://localhost:8081/"
                    }
                  }
                ],
                "principal_binding": 1
              }
            }
          
          - name: mixer
            config: {"transport":{"stats_update_interval":"1s"},"mixer_attributes":{"attributes":{"mesh1.ip":{"bytes_value":"AQEBAQ=="},"target.namespace":{"string_value":"XYZ222"},"target.uid":{"string_value":"POD222"}}}}
          - name: envoy.router
          route_config:
            name: backend
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: /
                route:
                  cluster: backend
                  timeout: 0s
                per_filter_config:
                  mixer: {"mixer_attributes":{"attributes":{"mesh2.ip":{"bytes_value":"AAAAAAAAAAAAAP//zJi9dA=="},"target.name":{"string_value":"target-name"},"target.user":{"string_value":"target-user"}}}}
  - name: client
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 20133
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: outbound_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: /tmp/envoy-access.log
          http_filters:
          - name: mixer
            config: {"forward_attributes":{"attributes":{"source.namespace":{"string_value":"XYZ11"},"source.uid":{"string_value":"POD11"}}}}
          - name: envoy.router
          route_config:
            name: loop
            virtual_hosts:
            - name: loop
              domains: ["*"]
              routes:
              - match:
                  prefix: /
                route:
                  cluster: loop
                  timeout: 0s
  - name: tcp_server
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 20135
    filter_chains:
    - filters:
      - name: mixer
        config: {"transport":{"stats_update_interval":"1s"},"mixer_attributes":{"attributes":{"mesh1.ip":{"bytes_value":"AQEBAQ=="},"target.namespace":{"string_value":"XYZ222"},"target.uid":{"string_value":"POD222"}}}}
      - name: envoy.tcp_proxy
        config:
          stat_prefix: inbound_tcp
          cluster: backend
